--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,47 @@
-body {
+*{
+    box-sizing:border-box;
+    padding: 0;
     margin: 0;
-    background: pink;
-    text-align: center;
+    font-family: poppins, sans-serif;
+    text-decoration: none;
+}
+body{
+    overflow-x: hidden;
+}
+.hero-header{
+    width: 100%;
+    height: 100%;
+    min-height:100vh;
+    background:#222;
+}
+.wrapper{
+    width: 1280px;
+    max-width: 95%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+header{
+    padding:40px 0 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.logo{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center; 
+}
+.logo i{
+    height: 45px;
+    width: 45px; 
+    background-color: darksalmon;
+    border-radius: 50%;
+    color:aliceblue;
+    font-weight: 700;
+    font-size: 1.5rem;
+    padding: 10px;
+    margin-right: 5px; 
+    cursor: pointer;
+    text-align: center; 
 }
