--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     width: 100%;
     height: 100%;
     min-height:100vh;
-    background:#222;
+    background:#fffa76;
 }
 .wrapper{
     width: 1280px;
@@ -35,7 +35,7 @@ header{
 .logo i{
     height: 45px;
     width: 45px; 
-    background-color: darksalmon;
+    background-color: rgb(197, 88, 255);
     border-radius: 50%;
     color:aliceblue;
     font-weight: 700;
@@ -44,4 +44,38 @@ header{
     margin-right: 5px; 
     cursor: pointer;
     text-align: center; 
+}
+.logo .logo-text{
+    font-size: 24px;
+    font-weight:500;
+    color:aliceblue;
+}
+nav .togglebtn{
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 45px;
+    right: 3%;
+    z-index: 5;
+    cursor: pointer;
+    display: none;
+}
+nav .togglebtn span{
+    display: block;
+    background-color: blanchedalmond;
+    margin: 5px 0px;
+    width: 100%;
+    height: 3px;
+    transition: 0.3s;
+    transition-property: transform, opacity;
+}
+nav .navlinks{
+    list-style-type: none;
+}
+nav .navlinks li{
+    display: inline-block;
+}
+nav .navlinks li a{
+    color:aquamarine; 
+    margin-right: 2.5rem;
 }
