--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     width: 100%;
     height: 100%;
     min-height:100vh;
-    background:#fffa76;
+    background:#313c73;
 }
 .wrapper{
     width: 1280px;
