--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,141 @@ nav .navlinks li a{
     color:aquamarine; 
     margin-right: 2.5rem;
 }
+.container{
+    display:flex; 
+    justify-content: space-around;
+    align-items:center;
+    padding-top:4rem;
+}
+.container .rachel-pic{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 15px solid #444;
+    box-shadow: 5px 7px 25px rgba(0,0,0,0.5);
+}
+.rachel-pic img{
+    height: 100%;
+    width: 100%;
+    transition: 0.5s; 
+}
+.rachel-pic img:hover{
+    transform: scale(1.2);
+}
+.rz-text{
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+}
+.rz-text h5{
+    color: whitesmoke;
+    font-size: 14px; 
+}
+.rz-text h5 span{
+    color: yellow;
+    font-size: 16px; 
+}
+.rz-text h1{
+    color: yellow;
+    font-size: 3rem;
+}
+.rz-text p{
+    color: whitesmoke;
+
+}
+.btn-group{
+    margin: 45px 0;
+}
+.btn-group .btn{
+    border-color: pink;
+    color: whitesmoke;
+    background-color: blue;
+    padding: 12px 25px;
+    margin: 5px 0;
+    margin-right:7px; 
+    border-radius: 30px; 
+    border: 2px solid whitesmoke;
+    box-shadow: 0 10px 10px -8px rgba(0 0 0 / 78%);
+}
+.btn.active{
+    border-color: yellow;
+
+}
+.rz-text .social i{
+    color:pink;
+    font-size: 18px;
+    margin-right: 10px; 
+    transition: 0.5s;
+}
+.hero-text .social i:hover{
+    color: whitesmoke;
+    transform: rotate(360deg);
+}
+/* Responsive design & displaying navbar for small screen*/
+@media(max-width:930px)
+{
+    nav .togglebtn{
+        display: initial;
+    }
+    /* for toggle button**/
+    .click {
+        top: 45px;
+    }
+    .click span{
+        position: absolute;
+        margin-top: 12px;
+    }
+    .click span:first-child{
+        transform: rotate(-40deg);
+    }
+    .click span:nth-child(2){
+        opacity: 0;
+        margin: 0; 
+    }
+    .click span:last-child{
+        transform: rotate(45deg);
+        top:0;
+    }
+    nav .navlinks{
+        position: absolute;
+        top:110px;
+        right:-100%;
+        bottom:0;
+        width: 60%;
+        height: 100vh;
+        background-color:#222;
+        z-index: 3;
+        box-shadow: 5px 13px 30px rgba(0,0,0,0.1);
+        transition: 0.5s;
+        padding: 25px 0px;
+
+    }
+
+    nav .navlinks li{
+        display:block;
+
+    }
+    nav .navlinks li a{
+        display: block;
+        margin-bottom: 15px;
+        text-align: center; 
+
+    }
+    nav .navlinks.open{
+        right: 0;
+    }
+}
+
+@media(max-width:768px)
+{
+    .container{
+        flex-direction: column;
+        padding-top: 2rem;
+
+    }
+    .rz-text{
+        padding: 40px 0px; 
+
+    }
+}
