--- a/styles.css
+++ b/styles.css
@@ -119,8 +119,8 @@ nav .navlinks li a{
     font-size: 3rem;
 }
 .rz-text h2{
-    color: orange;
-    font-size: 2.5rem;
+    color: rgb(221, 221, 6);
+    font-size: 2rem;
 }
 .rz-text p{
     color: whitesmoke;
