--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ nav .navlinks li a {
 .project-info h2, .project-info p {
     font-size: 1rem; /* Adjust font size to fit in larger blocks */
     margin: 0;
+    color: #fefe37;
 }
 
 /* Footer */
