--- a/styles.css
+++ b/styles.css
@@ -193,11 +193,12 @@ nav .navlinks li a {
 .project-info h2, .project-info p {
     font-size: 1rem; /* Adjust font size to fit in larger blocks */
     margin: 0;
+    color: #000000;
 }
 
 /* Ensure My Portfolio heading color is yellow */
 .portfolio > h1 {
-    color: yellow; /* Change color to yellow */
+    color: #fefe37; /* Change color to yellow */
 }
 
 /* Footer */
