--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px; /* Adjust this to move the logo and "RZ" downward */
+    margin-top: 20px; /* Adjust this to move the logo and "RZ" downward */
 }
 .logo i {
     height: 45px;
